--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -38,6 +38,7 @@
   background-color: rgba(0, 0, 0, 0.315);
   text-align: center;
   padding-top: 48vh;
+  z-index: 1;
 }
 #flash-messages {
   position: absolute;
@@ -60,4 +61,8 @@
 
 .stock-display-row:hover, .stock-display-row.active {
   background-color: rgb(55, 90, 127) !important;
+}
+
+.bg-dark {
+  color: white;
 }
